feat: implement search and replace (#30)
* feat: implement findCaseInsensitiveMatches (WIP)

* chore: update to the latest @sveltejs/kit

* feat: implement support for multiple search results per key or value

* refactor: extract EditableDiv component and use this in both JSONKey and JSONValue

* feat: implement search&replace interface

* feat: implement search&replace operations (WIP)

* chore: update dependencies

* fix: onChange triggering twice on Enter

* fix: scroll to selection after undo/redo

* fix: wrong activeItem after replacing a search result

* fix: quick keys Enter and Ctrl+Enter to search next and replace

* fix: let SearchBox remember it's last text and replaceText

* fix: font size and family of inputs and buttons in the SearchBox

* feat: implement replace all

* chore: add some unit tests

* fix: search and replace with number/boolean/null

* fix: disable undo/redo quickkeys when in readonly mode

* fix: trigger emitting a change when replacing something

* fix: remove double debouncing to check for valid JSON

* fix: disable search&replace when readOnly

* fix: update dependencies

* fix: remove empty scss file

* fix: search results not updated when document is changed externally

--- a/src/lib/components/modes/treemode/shared.scss
+++ b/src/lib/components/modes/treemode/shared.scss
@@ -1,41 +1,34 @@
 @import '../../../styles';
 
-// for key and value
-div.editable-div {
-  line-height: $line-height;
-  min-width: 16px;
-  word-break: normal;
-  padding: 0 $input-padding;
-  box-sizing: border-box;
-  outline: none;
-  border-radius: 1px;
-  vertical-align: top;
-
-  &[contenteditable='true'] {
-    outline: 2px solid $edit-border-color;
-    background: $white !important;
-    position: relative;
-    border-radius: 0;
-    z-index: 3; // must be on top of hovering the entry below it
+.value {
+  &.string {
+    color: $value-color-string;
   }
 
-  &.search {
-    background-color: $highlight-color;
-
-    &.active {
-      background-color: $highlight-active-color;
-    }
+  &.object,
+  &.array {
+    min-width: 16px;
+    color: $meta-color;
   }
 
-  &.empty {
-    &:not(:focus) {
-      outline: 1px dotted $light-gray-transparent;
-      -moz-outline-radius: 2px;
-    }
+  &.number {
+    color: $value-color-number;
+  }
 
-    &::after {
-      pointer-events: none;
-      color: $light-gray-transparent;
-    }
+  &.boolean {
+    color: $value-color-boolean;
+  }
+
+  &.null {
+    color: $value-color-null;
+  }
+
+  &.invalid {
+    color: $black;
+  }
+
+  &.url {
+    color: $value-color-url;
+    text-decoration: underline;
   }
 }
