--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -5,7 +5,19 @@
   .description {
     color: $dark-gray;
 
-    code {
+    :global(p) {
+      margin: $padding 0;
+
+      &:first-child {
+        margin-top: 0;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    :global(code) {
       background: $background-gray;
       font-family: $font-family-mono;
       font-size: $font-size-mono;
