chore: rename "field" and "fields" into "path" and "paths"

--- a/src/lib/components/modals/TransformWizard.scss
+++ b/src/lib/components/modals/TransformWizard.scss
@@ -38,7 +38,7 @@ table.transform-wizard {
           flex: 1;
         }
 
-        :global(.selectContainer.pick-fields) {
+        :global(.selectContainer.projection-fields) {
           flex: 1;
         }
 
