--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -12,6 +12,7 @@
   --clearSelectTop: 2px;
   --clearSelectBottom: 2px;
   --itemIsActiveBG: #3883fa; // theme-color
+  --indicatorTop: 8px;
 
   font-family: $font-family;
   font-size: $font-size;
