fix: small styling fix

--- a/src/lib/components/modals/TransformWizard.scss
+++ b/src/lib/components/modals/TransformWizard.scss
@@ -48,7 +48,7 @@ table.transform-wizard {
 
         .filter-value {
           flex: 4;
-          padding: $padding;
+          padding: 8px;
           border: 1px solid $border-gray;
           border-radius: $border-radius;
           outline: none;
