fix: styling fix of the scrollbar in the TransformModal

--- a/src/lib/components/modals/SortModal.scss
+++ b/src/lib/components/modals/SortModal.scss
@@ -2,6 +2,10 @@
 @import 'Modal';
 
 .jsoneditor-modal.sort {
+  .contents {
+    overflow: hidden;
+  }
+
   table {
     width: 100%;
     border-collapse: collapse;
