--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -14,12 +14,17 @@
   --itemIsActiveBG: #3883fa; // theme-color
   --indicatorTop: 8px;
 
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
   font-family: $font-family;
   font-size: $font-size;
   color: $black;
 
   .contents {
     padding: 20px;
+    overflow: auto;
 
     .actions {
       display: flex;
