chore: reduce JSONValue to rendering a list with value render components based on conditions

--- a/src/lib/components/modals/Header.scss
+++ b/src/lib/components/modals/Header.scss
@@ -11,8 +11,7 @@
     vertical-align: middle;
   }
 
-  button.config,
-  button.close {
+  button {
     border: none;
     background: transparent;
     min-width: 32px;
