--- a/src/lib/components/modes/treemode/value/ReadonlyDiv.scss
+++ b/src/lib/components/modes/treemode/value/ReadonlyDiv.scss
@@ -1,5 +1,5 @@
-@import '../../../styles';
-@import 'shared.scss';
+@import '../../../../styles';
+@import '../shared.scss';
 
 .value {
   line-height: $line-height;
