--- a/src/lib/plugins/value/components/EditableDiv.scss
+++ b/src/lib/plugins/value/components/EditableDiv.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles';
-@import '../shared.scss';
+@import '../../../styles';
+@import '../../../components/modes/treemode/shared';
 
 // for key and value
 div.jse-editable-div {
