fix: component JSONKey was broken during refactoring

--- a/src/lib/components/controls/EditableDiv.scss
+++ b/src/lib/components/controls/EditableDiv.scss
@@ -1,5 +1,5 @@
-@import '../../../styles';
-@import '../../../components/modes/treemode/shared';
+@import '../../styles';
+@import './EditableDivShared';
 
 // for key and value
 div.jse-editable-div {
