--- a/src/lib/components/controls/EditableDiv.scss
+++ b/src/lib/components/controls/EditableDiv.scss
@@ -11,6 +11,7 @@ div.jse-editable-div {
   outline: none;
   border-radius: 1px;
   vertical-align: top;
+  overflow-wrap: anywhere;
 
   &[contenteditable='true'] {
     outline: 2px solid $edit-border-color;
