feat: implement EnumValue and renderJSONSchemaEnum (WIP)

--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -39,7 +39,7 @@ $value-color-url: $value-color-string;
 
 $contents-background: $white;
 $selection-background: $middle-gray;
-$selection-color: $white;
+$selection-color: $black;
 $hovered-background: rgb(240, 240, 240); // #f0f0f0
 $hovered-background-transparent: rgba(0, 0, 0, 0.06); // #f0f0f0, with transparency
 $background-gray: #f5f5f5;
