feat: custom rendering with onRenderValue, performance improvements, and fixes
* chore: reduce JSONValue to rendering a list with value render components based on conditions

* chore: move ajv plugin into plugins/validator

* feat: implement `renderValue` callback and use it in `JSONValue` (WIP)

* fix: component JSONKey was broken during refactoring

* feat: implement `onRenderValue` callback

* chore: fix broken import after merge

* chore: fix a svelte console warning

* docs: create example demonstrating onRenderValue

* fix: improve performance by passing a recursive selection object

* feat: implement EnumValue and renderJSONSchemaEnum (WIP)

* fix: create a `svelte-jsoneditor` alias in the vite config and use that in the examples

* fix: handle focus of EnumValue, colorize text

* chore: update all dependencies

* fix: multiple context menu buttons visible in case of multi select

* fix: make custom validation example more robust

* chore: improve custom validation example a bit

* fix: move selection to value after editing a key

--- a/src/lib/components/controls/EditableDiv.scss
+++ b/src/lib/components/controls/EditableDiv.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles';
-@import '../shared.scss';
+@import '../../styles';
+@import './EditableDivShared';
 
 // for key and value
 div.jse-editable-div {
@@ -11,6 +11,7 @@ div.jse-editable-div {
   outline: none;
   border-radius: 1px;
   vertical-align: top;
+  overflow-wrap: anywhere;
 
   &[contenteditable='true'] {
     outline: 2px solid $edit-border-color;
