--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -27,9 +27,9 @@ $dark-gray: #656565;
 $gray: rgb(157, 157, 157); // #9d9d9d
 $gray-transparent: rgba(0, 0, 0, 0.38); // #9d9d9d but with transparency
 $middle-gray: #d3d3d3; // #d3d3d3
-$light-gray: rgb(192, 192, 192); // #c0c0c0
+$light-gray: rgb(192, 192, 192);
 $very-light-gray: rgb(226, 226, 226);
-$light-gray-transparent: rgba(0, 0, 0, 0.25); // #c0c0c0
+$light-gray-transparent: rgba(0, 0, 0, 0.25);
 
 $value-color-string: #008000;
 $value-color-number: #ee422e;
@@ -39,7 +39,7 @@ $value-color-url: $value-color-string;
 
 $contents-background: $white;
 $selection-background: $middle-gray;
-$selection-color: $white;
+$selection-color: $black;
 $hovered-background: rgb(240, 240, 240); // #f0f0f0
 $hovered-background-transparent: rgba(0, 0, 0, 0.06); // #f0f0f0, with transparency
 $background-gray: #f5f5f5;
