--- a/src/lib/components/modes/treemode/json-node-selected-mixin.scss
+++ b/src/lib/components/modes/treemode/json-node-selected-mixin.scss
@@ -62,6 +62,10 @@
         background-color: $selection-background !important;
       }
     }
+
+    .tag.readonly {
+      background: transparent;
+    }
   }
 
   .insert-area {
