fix: styling issue with the BooleanToggle

--- a/src/lib/plugins/value/components/BooleanToggle.scss
+++ b/src/lib/plugins/value/components/BooleanToggle.scss
@@ -3,6 +3,7 @@
 .boolean-toggle {
   color: $value-color-boolean;
   position: relative;
+  display: flex;
   top: 1px;
   padding-left: $padding-half;
 }
