--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -1,7 +1,8 @@
 $font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
   'Helvetica Neue', sans-serif;
-$font-family-mono: consolas, monaco, 'lucida console', 'dejavu sans mono', 'droid sans mono',
-  monospace, 'courier new', courier;
+// "consolas" for Windows, "menlo" for Mac with fallback to "monaco", 'Ubuntu Mono' for Ubuntu
+// (at Mac this font looks too large at 14px, but 13px is too small for the font on Windows)
+$font-family-mono: consolas, menlo, monaco, 'Ubuntu Mono', 'source-code-pro', monospace !default;
 $font-size-mono: 14px;
 $font-size: 16px;
 $font-size-small: 11px;
