--- a/src/lib/components/modes/treemode/JSONNode.scss
+++ b/src/lib/components/modes/treemode/JSONNode.scss
@@ -91,7 +91,7 @@
 
     &.after {
       display: flex;
-      align-items: end;
+      align-items: flex-end;
       line-height: $line-height;
     }
   }
