fix: styling tweak for the readonly item count tag

--- a/src/lib/components/modes/treemode/JSONNode.scss
+++ b/src/lib/components/modes/treemode/JSONNode.scss
@@ -201,7 +201,7 @@
 
   &.readonly {
     color: $light-gray-transparent;
-    background: $background-gray;
+    background: $background-light-gray-transparent;
     cursor: inherit;
   }
 }
