--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -44,6 +44,7 @@ $selection-color: $black;
 $hovered-background: rgb(240, 240, 240); // #f0f0f0
 $hovered-background-transparent: rgba(0, 0, 0, 0.06); // #f0f0f0, with transparency
 $background-gray: #f5f5f5;
+$background-light-gray-transparent: rgba(0, 0, 0, 0.06);
 $border-gray: #d8dbdf;
 $meta-color: $gray-transparent;
 $edit-border-color: $dark-gray;
