fix: enlarge the drop down button

--- a/src/lib/components/controls/DropdownButton.scss
+++ b/src/lib/components/controls/DropdownButton.scss
@@ -23,7 +23,7 @@
   button.open-dropdown {
     @include jsoneditor-button;
 
-    padding: $padding $padding-half;
+    padding: $padding;
     background: $dark-gray;
     color: $white;
 
