--- a/src/lib/components/controls/Message.scss
+++ b/src/lib/components/controls/Message.scss
@@ -18,6 +18,14 @@
   .text {
     flex: 1;
     min-width: 60%;
+
+    &.clickable {
+      cursor: pointer;
+
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+      }
+    }
   }
 
   &.error {
