fix: styling tweaks

--- a/src/lib/components/modes/codemode/CodeMode.scss
+++ b/src/lib/components/modes/codemode/CodeMode.scss
@@ -28,6 +28,10 @@
         line-height: 1.3em;
         color: $black;
       }
+
+      :global(.cm-gutters) {
+        background: $very-light-gray;
+      }
     }
 
     .loading-space {
