--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -29,7 +29,7 @@ $gray: rgb(157, 157, 157); // #9d9d9d
 $gray-transparent: rgba(0, 0, 0, 0.38); // #9d9d9d but with transparency
 $middle-gray: #d3d3d3; // #d3d3d3
 $light-gray: rgb(192, 192, 192);
-$very-light-gray: rgb(226, 226, 226);
+$very-light-gray: #ebebeb;
 $light-gray-transparent: rgba(0, 0, 0, 0.25);
 
 $value-color-string: #008000;
