fix: define font for linting messages

--- a/src/lib/components/modes/codemode/CodeMode.scss
+++ b/src/lib/components/modes/codemode/CodeMode.scss
@@ -32,6 +32,11 @@
       :global(.cm-gutters) {
         background: $very-light-gray;
       }
+
+      :global(.cm-diagnostic) {
+        font-size: $font-size;
+        font-family: $font-family;
+      }
     }
 
     .loading-space {
