--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -25,7 +25,46 @@
   }
 
   .contents {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
     color: $dark-gray;
+
+    .columns {
+      flex: 1;
+      display: flex;
+      gap: $padding;
+      overflow: hidden;
+
+      .column {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+
+        &.flex-2 {
+          flex: 2;
+        }
+
+        &.flex-3 {
+          flex: 3;
+        }
+
+        textarea.query {
+          flex: 1;
+        }
+
+        :global(.jsoneditor-main) {
+          flex: 1;
+          border: 1px solid $background-gray;
+          box-shadow: none;
+          box-sizing: border-box;
+
+          :global(&:focus) {
+            border: 1px solid $border-gray;
+          }
+        }
+      }
+    }
   }
 
   .label {
@@ -41,10 +80,8 @@
   }
 
   input.path,
-  textarea.query,
-  textarea.preview {
+  textarea.query {
     border: 1px solid $border-gray;
-    border-radius: $border-radius;
     outline: none;
     box-sizing: border-box;
     padding: $padding-half;
@@ -57,22 +94,19 @@
     width: 100%;
   }
 
-  textarea.query,
-  textarea.preview {
+  textarea.query {
     border: 1px solid $border-gray;
-    border-radius: $border-radius;
     outline: none;
     width: 100%;
     height: 100px;
     resize: vertical; // prevent resizing horizontally
   }
 
-  textarea.preview {
-    height: 200px;
-
-    &.error {
-      color: $red;
-    }
+  .preview.error {
+    flex: 1;
+    border: 1px solid $background-gray;
+    color: $red;
+    padding: $padding-half;
   }
 
   input,
