--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -29,17 +29,37 @@
     display: flex;
     flex-direction: column;
     color: $dark-gray;
+    overflow: hidden;
+    padding: 0;
+
+    .description {
+      padding: 2 * $padding;
+      padding-bottom: 0;
+    }
+
+    .contents-inner {
+      flex: 1;
+      display: flex;
+      overflow: hidden;
+      padding: 2 * $padding;
+    }
+
+    .actions {
+      padding: 2 * $padding;
+      padding-top: 0;
+    }
 
     .columns {
       flex: 1;
       display: flex;
-      gap: $padding;
+      gap: 2 * $padding;
       overflow: hidden;
 
       .column {
         flex: 1;
         display: flex;
         flex-direction: column;
+        overflow: hidden;
 
         &.flex-2 {
           flex: 2;
@@ -47,6 +67,10 @@
 
         &.flex-3 {
           flex: 3;
+        }
+
+        &.flex-4 {
+          flex: 4;
         }
 
         textarea.query {
@@ -58,10 +82,42 @@
           border: 1px solid $background-gray;
           box-shadow: none;
           box-sizing: border-box;
+          min-height: 300px;
 
           :global(&:focus) {
             border: 1px solid $border-gray;
           }
+        }
+      }
+
+      @media screen and (max-width: 1600px) {
+        &.query-data {
+          flex-direction: column;
+        }
+      }
+    }
+
+    @media screen and (max-width: 1200px) {
+      .columns {
+        flex-direction: column;
+
+        &.all {
+        }
+
+        .column {
+          flex: 1;
+
+          &.query {
+            overflow: visible;
+          }
+        }
+      }
+
+      .contents-inner {
+        overflow: auto;
+
+        .columns.all {
+          min-height: 1000px;
         }
       }
     }
