--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -32,11 +32,6 @@
     overflow: hidden;
     padding: 0;
 
-    .description {
-      padding: 2 * $padding;
-      padding-bottom: 0;
-    }
-
     .actions {
       padding: 2 * $padding;
       padding-top: $padding;
@@ -47,9 +42,11 @@
       display: flex;
       gap: 2 * $padding;
       overflow: hidden;
+      box-sizing: border-box;
 
       &.all {
         padding: 2 * $padding;
+        padding-top: 0;
         padding-bottom: $padding;
       }
 
@@ -58,6 +55,7 @@
         display: flex;
         flex-direction: column;
         overflow: hidden;
+        box-sizing: border-box;
 
         &.flex-2 {
           flex: 2;
