fix: query textarea not having enough height on small screen

--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -118,7 +118,8 @@
           overflow: visible;
 
           textarea.query {
-            height: 200px;
+            min-height: 150px;
+            flex: none;
           }
 
           :global(.jsoneditor-main) {
