--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -2,133 +2,108 @@
 @import 'Modal';
 
 .jsoneditor-modal.transform {
-  .description {
-    color: $dark-gray;
-
-    :global(p) {
-      margin: $padding 0;
-
-      &:first-child {
-        margin-top: 0;
-      }
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-
-    :global(code) {
-      background: $background-gray;
-      font-family: $font-family-mono;
-      font-size: $font-size-mono;
-    }
-  }
-
   .contents {
     flex: 1;
     display: flex;
     flex-direction: column;
     color: $dark-gray;
-    overflow: hidden;
+    min-height: 0;
     padding: 0;
+
+    .main-contents {
+      flex: 1;
+      display: flex;
+      gap: 2 * $padding;
+      min-height: 0;
+      box-sizing: border-box;
+
+      padding: 2 * $padding;
+      padding-top: 0;
+      padding-bottom: $padding;
+
+      .query-contents {
+        flex: 3;
+        display: flex;
+        flex-direction: column;
+
+        .description {
+          color: $dark-gray;
+
+          :global(p) {
+            margin: $padding 0;
+
+            &:first-child {
+              margin-top: 0;
+            }
+
+            &:last-child {
+              margin-bottom: 0;
+            }
+          }
+
+          :global(code) {
+            background: $background-gray;
+            font-family: $font-family-mono;
+            font-size: $font-size-mono;
+          }
+        }
+
+        textarea.query {
+          flex: 1;
+          outline: none;
+          resize: vertical; // prevent resizing horizontally
+        }
+      }
+
+      .data-contents {
+        flex: 4;
+        display: flex;
+        flex-direction: row;
+        gap: 2 * $padding;
+
+        .original-data {
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          min-height: 0;
+        }
+
+        .preview-data {
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          min-height: 0;
+        }
+
+        @media screen and (max-width: 1600px) {
+          & {
+            flex-direction: column;
+          }
+        }
+      }
+    }
 
     .actions {
       padding: 2 * $padding;
       padding-top: $padding;
     }
 
-    .columns {
-      flex: 1;
-      display: flex;
-      gap: 2 * $padding;
-      overflow: hidden;
-      box-sizing: border-box;
-
-      &.all {
-        padding: 2 * $padding;
-        padding-top: 0;
-        padding-bottom: $padding;
-      }
-
-      .column {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        overflow: hidden;
-        box-sizing: border-box;
-
-        &.flex-2 {
-          flex: 2;
-        }
-
-        &.flex-3 {
-          flex: 3;
-        }
-
-        &.flex-4 {
-          flex: 4;
-        }
-
-        &.no-flex {
-          flex: none;
-        }
-
-        textarea.query {
-          flex: 1;
-        }
-
-        :global(.jsoneditor-main) {
-          flex: 1;
-          border: 1px solid $background-gray;
-          box-shadow: none;
-          box-sizing: border-box;
-          min-height: 300px;
-
-          :global(&:focus) {
-            border: 1px solid $border-gray;
-          }
-        }
-      }
-
-      &.query-data.hide-original {
-        flex-direction: column;
-
-        .column.preview .label {
-          padding-top: 0;
-        }
-      }
-
-      @media screen and (max-width: 1600px) {
-        &.query-data {
-          flex-direction: column;
-        }
-      }
-    }
-
     @media screen and (max-width: 1200px) {
-      .columns {
+      .main-contents {
         flex-direction: column;
+        overflow: auto;
 
-        &.all {
-          overflow: auto;
-        }
-
-        .column {
-          flex: 1;
-          overflow: visible;
-
+        .query-contents {
           textarea.query {
             min-height: 150px;
             flex: none;
           }
+        }
 
+        .data-contents {
           :global(.jsoneditor-main) {
             height: 300px;
             flex: none;
-          }
-
-          &.query {
-            overflow: visible;
           }
         }
       }
@@ -137,18 +112,35 @@
 
   .label {
     font-weight: bold;
-    padding-top: $padding * 2;
-    padding-bottom: $padding-half;
     display: block;
 
-    button {
-      @include jsoneditor-button;
-      font-weight: bold;
+    .label-inner {
+      // FIXME: fix the padding/margin
+      //padding-top: $padding * 2;
+      //padding-bottom: $padding-half;
+
+      button {
+        @include jsoneditor-button;
+        font-weight: bold;
+        padding: 0;
+      }
     }
   }
 
-  input.path,
-  textarea.query {
+  :global(.jsoneditor-main) {
+    flex: 1;
+    border: 1px solid $background-gray;
+    box-shadow: none;
+    box-sizing: border-box;
+    min-height: 300px;
+  }
+
+  :global(.jsoneditor-main.focus) {
+    border: 1px solid $theme-color;
+  }
+
+  input,
+  textarea {
     border: 1px solid $border-gray;
     outline: none;
     box-sizing: border-box;
@@ -156,29 +148,7 @@
     font-family: $font-family-mono;
     font-size: $font-size-mono;
     color: $black;
-  }
 
-  input.path {
-    width: 100%;
-  }
-
-  textarea.query {
-    border: 1px solid $border-gray;
-    outline: none;
-    width: 100%;
-    height: 100px;
-    resize: vertical; // prevent resizing horizontally
-  }
-
-  .preview.error {
-    flex: 1;
-    border: 1px solid $background-gray;
-    color: $red;
-    padding: $padding-half;
-  }
-
-  input,
-  textarea {
     &:focus {
       border-color: $theme-color;
     }
@@ -186,5 +156,12 @@
     &:read-only {
       border-color: $background-gray;
     }
+  }
+
+  .preview.error {
+    flex: 1;
+    border: 1px solid $background-gray;
+    color: $red;
+    padding: $padding-half;
   }
 }
