--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -66,6 +66,11 @@
           display: flex;
           flex-direction: column;
           min-height: 0;
+          box-sizing: border-box;
+
+          &.hide {
+            flex: none;
+          }
         }
 
         .preview-data {
@@ -73,12 +78,20 @@
           display: flex;
           flex-direction: column;
           min-height: 0;
+          box-sizing: border-box;
         }
 
         @media screen and (max-width: 1600px) {
           & {
             flex-direction: column;
+            margin-bottom: 3.5 * $padding; // This is a trick to compensate for the padding of the labels
           }
+        }
+
+        &.hide-original-data {
+          flex-direction: column;
+          gap: 0;
+          margin-bottom: 0;
         }
       }
     }
@@ -113,11 +126,12 @@
   .label {
     font-weight: bold;
     display: block;
+    box-sizing: border-box;
 
     .label-inner {
-      // FIXME: fix the padding/margin
-      //padding-top: $padding * 2;
-      //padding-bottom: $padding-half;
+      margin-top: $padding * 2;
+      margin-bottom: $padding-half;
+      box-sizing: border-box;
 
       button {
         @include jsoneditor-button;
