chore: minor css tweak

--- a/src/lib/components/modals/TransformWizard.scss
+++ b/src/lib/components/modals/TransformWizard.scss
@@ -53,7 +53,7 @@ table.transform-wizard {
 
         .filter-value {
           flex: 4;
-          padding: 8px;
+          padding: 4px 8px;
           border: 1px solid $border-gray;
           border-radius: $border-radius;
           outline: none;
