fix: style the font family and size of the code search box

--- a/src/lib/components/modes/treemode/JSONNode.scss
+++ b/src/lib/components/modes/treemode/JSONNode.scss
@@ -179,7 +179,7 @@
 
 .tag {
   border: none;
-  font-size: $font-size-small;
+  font-size: $font-size-smallest;
   font-family: $font-family;
   color: $white;
   background: $light-gray-transparent;
