--- a/src/lib/components/modes/treemode/menu/SearchBox.scss
+++ b/src/lib/components/modes/treemode/menu/SearchBox.scss
@@ -93,7 +93,7 @@ $padding-section-left: 32px;
 
         .jse-search-count {
           color: $light-gray;
-          font-size: $font-size-small;
+          font-size: $font-size-smallest;
           visibility: hidden;
           padding: 0 $input-padding;
           min-width: 36px;
