--- a/src/lib/components/modes/codemode/CodeMode.scss
+++ b/src/lib/components/modes/codemode/CodeMode.scss
@@ -42,10 +42,11 @@
         background: $very-light-gray;
       }
 
+      :global(.cm-search label),
       :global(.cm-search input),
       :global(.cm-search button) {
-        //font-family: $font-family;
-        //font-size: $font-size-small;
+        font-family: $font-family;
+        font-size: $font-size-small;
       }
     }
 
