--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -5,7 +5,8 @@ $font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans
 $font-family-mono: consolas, menlo, monaco, 'Ubuntu Mono', 'source-code-pro', monospace !default;
 $font-size-mono: 14px;
 $font-size: 16px;
-$font-size-small: 11px;
+$font-size-small: 13px;
+$font-size-smallest: 11px;
 
 $white: #fff;
 $black: #1a1a1a;
