--- a/src/lib/components/modes/codemode/CodeMode.scss
+++ b/src/lib/components/modes/codemode/CodeMode.scss
@@ -37,6 +37,17 @@
         font-size: $font-size;
         font-family: $font-family;
       }
+
+      :global(.cm-search) {
+        background: $very-light-gray;
+      }
+
+      :global(.cm-search label),
+      :global(.cm-search input),
+      :global(.cm-search button) {
+        font-family: $font-family;
+        font-size: $font-size-small;
+      }
     }
 
     .loading-space {
